﻿shmuel 16.11.2013 17:17:31 +0200 - build 3716

1. Уточнение 3713.

shmuel 16.11.2013 16:55:01 +0200 - build 3715

1. Уточнение 3714.

shmuel 16.11.2013 14:54:12 +0200 - build 3714

1. Добавлен тип события в Panel API: FE_CHANGESORTPARAMS.

w17 16.11.2013 03:05:43 +0400 - build 3713

1. M#2208: Запоминать, в какой папке была запущена команда (from fml2)

svs 15.11.2013 17:39:24 +0400 - build 3712

1. Уточнения (немного) по TREEFILE_PROJECT (Mantis#0000186)
   про сетевые пути

svs 15.11.2013 15:35:21 +0400 - build 3711

1. Уточнения (немного) по TREEFILE_PROJECT (Mantis#0000186)
   Изменены шаблоны tree-файлов:
    "LD.%D.%SN.tree"      шаблон имени файла-деревяхи для локальных дисков
    "ND.%D.%SN.tree"      шаблон имени файла-деревяхи для сетевых дисков
    "NP.%SR.%SH.tree"     шаблон имени файла-деревяхи для сетевых путей
    "RD.%SN.tree"         шаблон имени файла-деревяхи для сменных дисков
    "CD.%L.%SN.tree"      шаблон имени файла-деревяхи для CD/DVD/BD/etc дисков

   <АХТУНГ>

   1. Не надо ставить /D TREEFILE_PROJECT - проект в разработке. Только для тестирования.
   2. Идеи и замечания сюда - http://bugs.farmanager.com/view.php?id=186

   </АХТУНГ>

w17 13.11.2013 01:12:09 +0400 - build 3710

1. M#2524: Падает при переименовании файла на маковском сетевом диске
   Experimental workaround for buggy OSX SMB.

w17 12.11.2013 20:11:28 +0400 - build 3709

1. M#2525: Некорректное обрезание редактируемого файла на маковском сетевом диске
   Experimental workaround for buggy OSX SMB.

svs 11.11.2013 11:16:52 +0400 - build

1. Уточнения в хелпе про команду title

2. Из разделов хелпа про редактор и вьювер убраны упоминания про печать (Alt-F5) - в коде нет поддержки этой операции.

shmuel 08.11.2013 18:47:05 +0200 - build 3708

1. M#2440: akey(1) и одиночные нажатия модификаторов.

drkns 03.11.2013 01:25:39 +0200 - build 3707

1. 0002521: Far падает при запуске ANSI-плагина My Documents начиная с билда 3506

shmuel 02.11.2013 21:39:35 +0200 - build 3706
