@@ -1,4 +1,8 @@
-﻿shmuel 16.11.2013 17:17:31 +0200 - build 3716
+﻿w17 18.11.2013 11:37:28 +0400 - build 3717
+
+1. Уточнение 3713 (не пишем дубликаты команд из разных каталогов)
+
+shmuel 16.11.2013 17:17:31 +0200 - build 3716
 
 1. Уточнение 3713.
 
